--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -78,6 +78,7 @@
     transition: background-color $transition-duration $cubic-bezier,
       fill $transition-duration $cubic-bezier;
     will-change: background-color, fill;
+    cursor: pointer;
 
     &:hover,
     &:focus {
