--- a/sass/components/_main-top.scss
+++ b/sass/components/_main-top.scss
@@ -1,16 +1,18 @@
 .main-top {
     padding: 200px 0;
+    
+
     background: linear-gradient(
         $main-image-linear-gradient,
         $main-image-linear-gradient
       ),
-      url(../images/background-image.jpg);
+      url(../images/background-baner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     max-width: 1600px;
     height: 600px;
     margin: 0 auto;
-    &__slogan {
+    &__title {
       width: 696px;
       margin: 0 auto;
       margin-bottom: 30px;
@@ -23,6 +25,7 @@
       color: $white;
     }
     &__button {
+      
       @extend %button;
       @include button-typeface(700, 1.875, 0.06em);
       margin: auto;
@@ -32,5 +35,11 @@
       color: $white;
       background-color: $blue;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      &:hover,
+      &:focus {
+        color: $black-title;
+      }
     }
   }
+
+  
