--- a/sass/components/_modal-statement.scss
+++ b/sass/components/_modal-statement.scss
@@ -13,9 +13,9 @@
     &__input {
       position: absolute;
       visibility: hidden;
-      // &:checked + svg {
-      //     visibility: hidden;
-      // }
+       &:checked + svg {
+         visibility: hidden;
+      }
       & ~ svg:nth-of-type(2) {
         visibility: hidden;
       }
@@ -33,8 +33,9 @@
       height: 15px;
       top: 3px;
       user-select: none;
+      visibility: hidden;
     }
     &__text {
-      margin-left: 24px;
+      margin-left: 9px;
     }
   }
