--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,6 +29,10 @@
       border: 1px solid rgba(0, 0, 0, 0.1);
       background-color: #fff;
       cursor: pointer;
+      &:hover,
+        &:focus {
+          fill: $black-title;
+        }
     }
   
     &__close-icon {
@@ -64,22 +68,22 @@
       line-height: 1.17;
       letter-spacing: 0.01em;
     }
-    &__input-container {
+    &__input-container{
       position: relative;
-      &:has(input:focus) > svg {
-        fill: $blue;
+        width: 100%;
+        &:focus-within{
+          fill: $blue;
+        }
       }
-    }
+      
     &__input {
       padding-left: 42px;
       width: 100%;
       height: 40px;
-      border: 1px solid $shadows-3;
+      border: 1px solid $border-input;
       border-radius: 4px;
       outline: transparent;
-      transition: border $transition-duration $cubic-bezier;
-      will-change: border;
-      &:focus {
+      &:focus-within {
         border-color: $blue;
       }
     }
@@ -87,7 +91,7 @@
       padding: 12px 16px;
       width: 100%;
       height: 120px;
-      border: 1px solid $shadows-3;
+      border: 1px solid $border-input;
       border-radius: 4px;
       resize: none;
       outline: transparent;
@@ -109,12 +113,12 @@
       position: absolute;
       top: 11px;
       left: 12px;
-      fill: $black-title;
-      transition: fill $transition-duration $cubic-bezier;
-      will-change: fill;
+      &:focus-within {
+          fill:$blue;
+        }
     }
   }
-  
+   
   .modal-send-btn {
     @extend %button;
     @include button-typeface(700, 1.875, 0.06em);
@@ -124,4 +128,9 @@
     color: $white;
     background-color: $blue;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    &:hover,
+      &:focus {
+        color: $black-title;
+      }
   }
+   
