--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,18 @@
-@import "./utils/variables";
-@import "./utils/global";
+@import "./components/our-clients";
+@import "./components/modal";
+@import "./components/what-we-do";
+@import "./components/our-team";
 @import "./components/body";
 @import "./components/header";
 @import "./components/menu";
 @import "./components/logo";
 @import "./components/navigation";
-@import "./components/buttons";
-@import "./components/main-top";
-@import "./components/modal";
 @import "./components/modal-statement";
-@import "./components/our-strengths";
-@import "./components/what-we-do";
-@import "./components/our-team";
-@import "./components/our-clients";
+@import "./components/our-skills";
+@import "./components/footer-newsletter";
+@import "./components/buttons";
+@import "./components/main-baner";
 @import "./components/footer-left";
 @import "./components/footer-socials";
-@import "./components/footer-newsletter";
+@import "./utils/variables";
+@import "./utils/global";
