--- a/sass/components/_portfolio-products.scss
+++ b/sass/components/_portfolio-products.scss
@@ -1,4 +1,4 @@
-.portfolio-cards {
+.portfolio-products {
     @extend %container;
     padding-left: 15px;
     padding-right: 15px;
@@ -7,7 +7,7 @@
     gap: 30px;
 }
 
-.portfolio-card {
+.portfolio-product {
     margin: 0;
     border-bottom: 1px solid $border-card;
     flex-basis: 370px;
@@ -38,7 +38,7 @@
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
 
-        & .portfolio-card__overlay {
+        & .portfolio-product__overlay {
             transform: translateY(-100%);
         }
     }
