--- a/sass/components/_main-baner.scss
+++ b/sass/components/_main-baner.scss
@@ -3,8 +3,8 @@
     
 
     background: linear-gradient(
-        $main-image-linear-gradient,
-        $main-image-linear-gradient
+        $shadows-4,
+        $shadows-4
       ),
       url(../images/background-baner.jpg);
     background-size: cover;
