--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -27,7 +27,7 @@
     &__label {
       padding: 27px;
       width: 100%;
-      background-color: $what-we-do-background-color;
+      background-color: $shadows-5;
       position: absolute;
       bottom: 0;
       text-align: center;
