--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,6 +18,7 @@
     $shadows-2: rgba(255, 255, 255, 0.1);
     $shadows-1: rgba(255, 255, 255, 0.6);
     $shadows-3: rgba(33 150 243 / 0.9);
-    $main-image-linear-gradient: rgba(47 48 58 / 0.4);
+    $shadows-4: rgba(47 48 58 / 0.4);
+    $shadows-5: rgba(47 48 58 / 0.8);
     $what-we-do-background-color: rgba(47 48 58 / 0.8);
   $font-family:"Roboto";
