--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -41,9 +41,8 @@
       height: 18px;
     }
   
-    *__header {
-      margin-top: 0;
-      margin-bottom: 12px;
+    &__header {
+      margin: 0px 30px 12px 30px;
       font-weight: 700;
       font-size: 20px;
       line-height: 1.15;
