--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,11 @@
 @import "./components/logo";
 @import "./components/navigation";
 @import "./components/buttons";
+
+@import "./components/portfolio-main";
+@import "./components/portfolio-buttons";
+@import "./components/portfolio-products";
+
 @import "./components/main-baner";
 @import "./components/modal";
 @import "./components/modal-statement";
